--- a/marioTracker/templates/marioTracker/index.html
+++ b/marioTracker/templates/marioTracker/index.html
@@ -45,17 +45,69 @@
                 Map Randomizer
             </div>
         </div>
+        <div class="button">
+            <span>Start</span>
+        </div>
         <div class="city">
             <div class="buildings">
-                <div class="tallBuilding"></div>
-                <div class="mediumBuilding"></div>
-                <div class="tallBuilding"></div>
-                <div class="mediumBuilding"></div>
-                <div class="tallBuilding"></div>
+                <div class="tallBuilding">
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                </div>
+                <div class="mediumBuilding">
+                    <div class="glassMedium"></div>
+                    <div class="glassMedium"></div>
+                    <div class="glassMedium"></div>
+                </div>
+                <div class="tallBuilding">
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                </div>
+                <div class="trafficLight">
+                    <div class="body">
+                        <div class="light"></div>
+                        <div class="light"></div>
+                        <div class="light"></div>
+                    </div>
+                    <div class="pole"></div>
+                </div>
+                <div class="mediumBuilding">
+                    <div class="glassMedium"></div>
+                    <div class="glassMedium"></div>
+                    <div class="glassMedium"></div>
+                </div>
+                <div class="tallBuilding">
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                    <div class="glassTall"></div>
+                </div>
             </div>
-            <div class="kart1"></div>
+            <div class="kart1">
+                <img src="{% static 'marioTracker/images/lui2.png' %}">
+                <div class="gas">
+                    <div class="circles"></div>
+                </div>
+            </div>
             <div class="street"></div>
         </div>
     </div>
+    <script type="text/javascript" src="{% static 'marioTracker/js/sprite.js' %}"></script>
 
 {% endblock %}
