--- a/marioTracker/templates/marioTracker/index.html
+++ b/marioTracker/templates/marioTracker/index.html
@@ -8,8 +8,7 @@
 
 {% block content %}
     <div class ="heroSection">
-        <div class="stars">
-            <div class="staticStar"></div>
+        <div id="stars">
         </div>
         <div class="clouds">
             <div class="cloud">
@@ -95,6 +94,6 @@
             <div class="street"></div>
         </div>
     </div>
-    <script type="text/javascript" src="{% static 'marioTracker/js/sprite.js' %}"></script>
+    <script type="text/javascript" src="{% static 'marioTracker/js/star.js' %}"></script>
 
 {% endblock %}
