--- a/marioTracker/static/marioTracker/index.css
+++ b/marioTracker/static/marioTracker/index.css
@@ -22,7 +22,7 @@
     flex-direction: column;
 }
 
-.stars {
+#stars {
     height: 25%;
     width: 100%;
     outline: white dotted 1px;
@@ -36,7 +36,31 @@
     width: 1px;
     background-color: azure;
     border-radius: 50%;
-    box-shadow: 5px 5px 2px 1px azure;
+}
+
+.growingStar {
+    position: relative;
+    height: 1px;
+    width: 1px;
+    background-color: azure;
+    border-radius: 50%;
+    animation: growStar 3s ease-in-out infinite;
+}
+
+.dynamicStar {
+    height: 1px;
+    width: 1px;
+    background-color: azure;
+    border-radius: 50%;
+    position: relative;
+    z-index: 1;
+}
+
+.trail {
+    background-color: azure;
+    height: 1px;
+    width: 1px;
+    position: relative;
 }
 
 .clouds {
@@ -224,6 +248,7 @@
     max-height: 100%;
     max-width: 100%;
     position: relative;
+    z-index: 2;
 }
 
 .gas {
@@ -322,20 +347,11 @@
     }
 }
 
-@keyframes playSprite {
-    to {
-        background-position: 0 -400px;
-    }
-}
-
 @keyframes exhaust {
     0% {
         opacity: 0;
     }
-    10% {
-        opacity: 1;
-    }
-    50% {
+    60% {
         opacity: 0.8;
     }
     100% {
@@ -344,11 +360,11 @@
 }
 
 @keyframes gasMovement {
-    0% {
-        transform: translateX(0);
+    10% {
+        transform: translateX(-60%);
     }
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-150%);
     }
 }
 
@@ -367,5 +383,17 @@
 @keyframes lightGreen {
     to {
         background-color: rgb(0, 39, 0);
+    }
+}
+
+@keyframes growStar {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(2.5);
+    }
+    100% {
+        transform: scale(1);
     }
 }
