--- a/marioTracker/static/marioTracker/mapGen.css
+++ b/marioTracker/static/marioTracker/mapGen.css
@@ -4,6 +4,7 @@ html, body {
     height: 100vh;
     width: 100vw;
     margin: 0;
+    overflow: hidden;
 }
 
 *, *::before, *::after {
@@ -13,12 +14,31 @@ html, body {
 }
 /* slideshow */
 
-.slideshow-container {
+#slideshow-container {
     max-width: 100%;
     height: 90%;
     position: relative;
     top: 5%;
     overflow: hidden;
+}
+
+#winner-container {
+    display: none;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+#title {
+    color: aliceblue;
+    text-align: center;
+}
+
+form {
+    height: 50vh;
+    width: 100%;
 }
 
 .mySlides {
@@ -38,7 +58,7 @@ html, body {
     margin: 0 5%;
 }
 
-.next, .skip, .finish {
+.next, .skip, #finish {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -54,12 +74,12 @@ html, body {
     user-select: none;
 }
 
-.next, .finish {
+.next, #finish {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
 
-.finish {
+#finish {
     display: none;
 }
 
@@ -106,6 +126,29 @@ html, body {
 .moveL {
     animation-name: moveL;
     animation-duration: 6s;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+}
+
+.contestant {
+    padding: 16px 64px;
+    border-radius: 5px;
+}
+
+.quadrant {
+    height: 100%;
+    width: 100%;
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 @keyframes moveR {
