--- a/marioTracker/templates/marioTracker/mapDisplay.html
+++ b/marioTracker/templates/marioTracker/mapDisplay.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{% static 'marioTracker/mapGen.css' %}">
     </head>
     <body>
-        <div class = "slideshow-container">
+        <div id="slideshow-container">
 
             <div class = "mySlides fade">
                 <div class="numbertext moveR"> 1 / {{ mapTexts|length }}</div>
@@ -151,9 +151,33 @@
             
             <a class="next" onmouseover="mouseOver(this, 'Next')" onmouseout="mouseOver(this, '&#10095;')" onclick="plusSlides(1)">&#10095;</a>
             <a class="skip" onmouseover="mouseOver(this, 'Skip')" onmouseout="mouseOut(this, 'X')" onclick="skipSlides(1)">X</a>
-            <a class="finish" onmouseover="mouseOver(this, 'Finish')" onmouseout="mouseOver(this, 'Finish')" href="{% url 'marioTracker:map' %}">Finish</a>
+            <button id="finish" onmouseover="mouseOver(this, 'Finish')" onmouseout="mouseOver(this, 'Finish')">Finish</button>
+        </div>
+        <div id="winner-container">
+            <h1 id="title">Race Participants:</h1>
+            <form method="post" action="{% url 'marioTracker:displayView' %}">
+                {% csrf_token %}
+                <div class="button-container">
+                    <div class="quadrant">
+                        {% for player in players|slice:"0:2" %}
+                            <button type="submit" class="contestant" name="winner" value="{{ player.id }}">
+                                {{ player.firstname }}
+                            </button>
+                        {% endfor %}
+                    </div>
+
+                    <div class="quadrant">
+                        {% for player in players|slice:"2:4" %}
+                            <button type="submit" class="contestant" name="winner" value="{{ player.id }}">
+                                {{ player.firstname }}
+                            </button>
+                        {% endfor %}
+                    </div>
+                </div>
+            </form>
         </div>
         <script type="text/javascript" src="{% static 'marioTracker/js/map.js' %}"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/chgText.js' %}"></script>
+        <script type="text/javascript" src="{% static 'marioTracker/js/winner.js' %}"></script>
     </body>
 </html>
