--- a/marioTracker/templates/marioTracker/congratulations.html
+++ b/marioTracker/templates/marioTracker/congratulations.html
@@ -13,6 +13,7 @@
             <h1>Congratulations Champion!</h1>
             <h2>{{ winner.firstname }}</h2>
             <h3>Wins: {{ wins|length }}</h3>
+            <a href="{% url 'marioTracker:index' %}">Home</a>
         </div>
 
 
