--- a/marioTracker/static/marioTracker/congrats.css
+++ b/marioTracker/static/marioTracker/congrats.css
@@ -20,3 +20,10 @@ canvas{
     align-items: center;
     justify-content: center;
 }
+
+a {
+    text-decoration: none;
+    color: aliceblue;
+    padding: 16px 32px;
+    background-color: cadetblue;
+}
