--- a/marioTracker/static/marioTracker/statOrMap.css
+++ b/marioTracker/static/marioTracker/statOrMap.css
@@ -7,7 +7,6 @@ body{
     position: relative;
     width: 100vw;
     height: 75vh;
-    outline: whitesmoke dotted 1px;
     display: flex;
     justify-content: space-around;
     margin-top: 15vh;
@@ -19,12 +18,10 @@ body{
     width: 33%;
     position: relative;
     border-radius: 20px;
-    box-shadow: 0 4px 8px 0 rgb(1, 56, 78), 0 6px 10px rgb(0, 21, 58);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-
 }
 
 .cardOneAnimation {
@@ -43,33 +40,35 @@ body{
     animation: cardTwoAnimation2 3s forwards;
 }
 
-tag {
+h3 {
     position: relative;
     width: 80%;
     height: 33%;
-    outline: black dotted 1px;
     background-color: #000a21;
     border-radius: 5px;
     display: flex;
     flex-grow: column;
     align-items: center;
     justify-content: center;
-}
-
-tag h3 {
-    outline: white dotted 1px;
-    font-size: 2em;
     color: rgb(193, 193, 193);
+    font-size: 2.5em;
 }
 
 .choice {
     position: relative;
     height: auto;
     padding: 15px 32px;
-    outline: black dotted 1px;
     border-radius: 5px;
     box-shadow: 0 4px 4px 0 rgba(11, 11, 11, 0.712), 0 6px 7px rgba(10, 10, 10, 0.788);
     background-color: rgb(193, 193, 193);
+    font-size: 1em;
+}
+
+.choice:hover {
+    transform: scale(1.1);
+    background-color:#000a21;
+    color: aliceblue;
+    outline: aliceblue solid 1px;
 }
 /* This is stat styling */
 #raceBackground {
@@ -82,7 +81,23 @@ tag h3 {
     display: none;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
+}
+
+#playerSelectForm {
+    width: 80%;
+    height: 30%;
+    display: none;
+    align-items: center;
+    justify-content: space-around;
+}
+
+span .select2 {
+    width: 50px;
+}
+
+.selection {
+    width: 100%;
 }
 
 #statBackground{
